Fixing bug 26468, gtk clipboard regression with plain text. Forgot to set the flavor when doing conversion to unicode from text/plain. doh! r=akkana